--- a/civimail-template.html
+++ b/civimail-template.html
@@ -177,7 +177,7 @@
                 <td valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
                     <a href="#">
-                      <img width="267" src="http://www.emailonacid.com/images/blog_images/Emailology/2013/responsive3.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
+                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Whats-so-great--highlight.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
                     </a>
                   </p>
                 </td>
@@ -229,7 +229,7 @@
                 <td valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
                     <a href="#">
-                      <img width="267" src="http://citybibleforum.org/sites/default/files/styles/highlight/public/images/content/Coopers-Event_Rotating-Banner.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
+                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Coopers-Event_Rotating-Banner.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
                     </a>
                   </p>
                 </td>
@@ -297,7 +297,7 @@
             <table width="100%">
               <tr>
                 <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
-                  Melbourne
+                  Blog
                 </td>
               </tr>
             </table>
@@ -315,7 +315,7 @@
             <table width="100%">
               <tr>
                 <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
-                  Melbourne
+                  Library
                 </td>
               </tr>
             </table>
@@ -333,7 +333,7 @@
             <table width="100%">
               <tr>
                 <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
-                  Melbourne
+                  Sydney
                 </td>
               </tr>
             </table>
@@ -351,7 +351,7 @@
             <table width="100%">
               <tr>
                 <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
-                  Melbourne
+                  National
                 </td>
               </tr>
             </table>
@@ -369,7 +369,7 @@
             <table width="100%">
               <tr>
                 <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
-                  Melbourne
+                  Brisbane
                 </td>
               </tr>
             </table>
