Made CiviMail template ready for testing

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Responsive Email Template</title>
+  <title>City Bible Forum</title>
   <style type="text/css">
     .ReadMsgBody {width: 100%; background-color: #ffffff;}
     .ExternalClass {width: 100%; background-color: #ffffff;}
@@ -58,7 +58,7 @@
       <div style="height:15px">&nbsp;</div><!-- spacer -->
 <!-- CIVIMAIL BODY -->
       <!-- Call to action -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#1e9dd8">
             <table>
@@ -91,15 +91,14 @@
           </td>
         </tr>
       </table><!-- Call to action -->
-      <div style="height:15px">&nbsp;</div><!-- spacer -->
-      <!-- One column - pale -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
+      <!-- One column - no image - pale/odd -->
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
         <tr>
           <td style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#d8eaf9">
             <table>
               <tr>
                 <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
-                  SECTION TITLE
+                  SECTION - NO IMAGE - ODD
                 </td>
               </tr>
             </table>
@@ -120,7 +119,7 @@
                        text-decoration: none;
                        font-family: 'Open Sans',Arial,Helvetica,sans-serif;
                        -webkit-text-size-adjust: none;">
-                      Register now
+                      Read more
                     </a>
                   </td>
                 </tr>
@@ -128,16 +127,15 @@
             </p>
           </td>
         </tr>
-      </table><!-- One column - pale -->
-      <div style="height:15px">&nbsp;</div><!-- spacer -->
-      <!-- One column - dark -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
+      </table><!-- One column - no image - pale/odd -->
+      <!-- One column - no image - dark/even -->
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#02426f">
             <table>
               <tr>
                 <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
-                  SECTION TITLE
+                  SECTION - NO IMAGE - EVEN
                 </td>
               </tr>
             </table>
@@ -166,10 +164,9 @@
             </p>
           </td>
         </tr>
-      </table><!-- One column - dark -->
-      <div style="height:15px">&nbsp;</div><!-- spacer -->
-      <!-- 2 Column - text left - pale -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
+      </table><!-- One column - no image - dark/even -->
+      <!-- 2 Column - text left - landscape image - pale/odd -->
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
         <tr>
           <td style="background-color: #d8eaf9; border-radius: 4px;">
             <table align="right" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -189,7 +186,7 @@
                   <table>
                     <tr>
                       <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
-                        SECTION TITLE
+                        SECTION - LANDSCAPE IMAGE - ODD
                       </td>
                     </tr>
                   </table>
@@ -207,7 +204,7 @@
                              text-decoration: none;
                              font-family: 'Open Sans',Arial,Helvetica,sans-serif;
                              -webkit-text-size-adjust: none;">
-                            Register now
+                            Read more
                           </a>
                         </td>
                       </tr>
@@ -218,10 +215,9 @@
             </table>
           </td>
         </tr>
-      </table><!-- End 2 Column - text left - pale -->
-      <div style="height:15px">&nbsp;</div><!-- spacer -->
-      <!-- 2 Column - text left - dark -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
+      </table><!-- End 2 Column - text left - landscape image - pale/odd -->
+      <!-- 2 Column - text left - landscape image - dark/even -->
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
         <tr>
           <td style="background-color: #02426f; border-radius: 4px;">
             <table align="right" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -241,7 +237,7 @@
                   <table>
                     <tr>
                       <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
-                        SECTION TITLE
+                        SECTION - LANDSCAPE IMAGE - EVEN
                       </td>
                     </tr>
                   </table>
@@ -270,10 +266,103 @@
             </table>
           </td>
         </tr>
-      </table><!-- End 2 Column - text left - dark -->
-      <div style="height:30px">&nbsp;</div><!-- spacer -->
+      </table><!-- End 2 Column - text left - landscape image - dark/even -->
+      <!-- 2 Column - text left - portrait image - pale/odd -->
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+        <tr>
+          <td style="background-color: #d8eaf9; border-radius: 4px;">
+            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
+              <tr>
+                <td width="49%" style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
+                  <table>
+                    <tr>
+                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
+                        SECTION - PORTRAIT IMAGE - ODD
+                      </td>
+                    </tr>
+                  </table>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
+                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                      <tr>
+                        <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; background-repeat: repeat-x;" align="center">
+                          <a href=""
+                             style="
+                             color: #ffffff;
+                             font-size: 14px;
+                             font-weight: bold;
+                             text-align: center;
+                             text-decoration: none;
+                             font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                             -webkit-text-size-adjust: none;">
+                            Register now
+                          </a>
+                        </td>
+                      </tr>
+                    </table>
+                  </p>
+                </td>
+                <td width="49%" valign="top" align="right" class="center" style="padding: 0;">
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <a href="#">
+                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/sydney/2013/re-think.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
+                    </a>
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table><!-- End 2 Column - text left - portrait image - pale/odd -->
+      <!-- 2 Column - text left - portrait image - dark/even -->
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+        <tr>
+          <td style="background-color: #02426f; border-radius: 4px;">
+            <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
+              <tr>
+                <td width="49%" style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
+                  <table>
+                    <tr>
+                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
+                        SECTION - PORTRAIT IMAGE - EVEN
+                      </td>
+                    </tr>
+                  </table>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
+                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                      <tr>
+                        <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
+                          <a href=""
+                             style="
+                             color: #02426f;
+                             font-size: 14px;
+                             font-weight: bold;
+                             text-align: center;
+                             text-decoration: none;
+                             font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                             -webkit-text-size-adjust: none;">
+                            Read more
+                          </a>
+                        </td>
+                      </tr>
+                    </table>
+                  </p>
+                </td>
+                <td width="49%" valign="top" align="right" class="center" style="padding: 0;">
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <a href="#">
+                      <img width="267" src="http://citybibleforum.org//sites/default/files/images/content/monkey-suit--aaron.michels--flickr.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
+                    </a>
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table><!-- End 2 Column - text left - portrait image - dark/even -->
       <!-- Blog Headlines -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" style="margin-top: 30px; margin-bottom: 30px;">
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
             <table width="100%">
@@ -384,36 +473,35 @@
         </tr>
       </table>
       <!-- end blog headlines -->
-      <div style="height:30px">&nbsp;</div><!-- spacer -->
 <!-- CIVIMAIL FOOTER -->
-      <!-- 4 Columns -->
+      <!-- Footer -->
       <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
         <tr>
           <td bgcolor="#363636" style="padding:30px 0">
             <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
               <tr>
                 <td>
-                  <table width="45%" cellpadding="0" cellspacing="0"  border="0" align="left" class="deviceWidth">
+                  <table width="45%" cellpadding="0" cellspacing="0"  border="0" align="left" class="deviceWidth" style="margin-bottom: 30px;">
                     <tr>
-                      <td valign="top" style="font-size: 11px; color: #989898; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding-bottom: 20px;" class="center">
-                        You are receiving this email because<br/>
-                        1.) You're an awesome customer of "Company Name" or<br/>
-                        2.) You subscribed via <a href="" style="color:#989898; text-decoration: underline;">our website</a><br/>
-                        <br/><br/>
-                        Want to be removed? No problem, <a href="" style="color:#989898; text-decoration: underline;">click here</a> and we won't bug you again.
+                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
+                        This email was sent to:<br/>
+                        {contact.display_name}<br/>
+                        <br/>
+                        <a href="{action.forward}" style="color: #989898;">Forward</a> this email to a friend or colleague<br/>
+                        <a href="{action.unsubscribeUrl}" style="color: #989898;">Unsubscribe</a> from emails on this topic<br/>
+                        or <a href="{action.optOutUrl}" style="color: #989898;">opt out</a> from all future communication with us
                       </td>
                     </tr>
                   </table>
                   <table width="40%" cellpadding="0" cellspacing="0"  border="0" align="right" class="deviceWidth">
                     <tr>
-                      <td valign="top" style="font-size: 11px; color: #989898; font-weight: normal; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 26px; vertical-align: top; text-align: right;" class="center">
-                        <a href=""><img src="http://www.emailonacid.com/images/emails/5_13/footer_rss.gif" width="42" height="42" alt="RSS Feed" title="RSS Feed" border="0" /></a>
-                        <a href=""><img src="http://www.emailonacid.com/images/emails/5_13/footer_twitter.gif" width="42" height="42" alt="Twitter" title="Twitter" border="0" /></a>
-                        <a href=""><img src="http://www.emailonacid.com/images/emails/5_13/footer_vm.gif" width="42" height="42" alt="Vimeo" title="Vimeo" border="0" /></a>
-                        <a href=""><img src="http://www.emailonacid.com/images/emails/5_13/footer_fb.gif" width="42" height="42" alt="Facebook" title="Facebook" border="0" /></a>
+                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
+                        <a href="http://citybibleforum.org" style="font-size: 16px; color: #ffffff; font-weight: bold; text-decoration: none;">City Bible Forum</a><br/>
                         <br/>
-                        <a href="#" style="text-decoration: none; color: #989898; font-weight: normal;">555-555-5555</a><br/>
-                        <a href="#" style="text-decoration: none; color: #989898; font-weight: normal;">email@email.com</a>
+                        National office:<br/>
+                        <br/>
+                        {domain.address}<br/>
+                        {domain.phone}
                       </td>
                     </tr>
                   </table>
@@ -422,7 +510,7 @@
             </table>
           </td>
         </tr>
-      </table><!-- End 4 Columns -->
+      </table><!-- Footer -->
     </td>
   </tr>
 </table> <!-- End Wrapper -->
