--- a/civimail-template.html
+++ b/civimail-template.html
@@ -25,7 +25,7 @@
   <tr>
     <td width="100%" valign="top" bgcolor="#ffffff" style="padding-top:20px">
       <!-- Start Header-->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" style="margin-bottom: 15px;">
         <tr>
           <td width="100%" bgcolor="#ffffff">
             <!-- Logo -->
@@ -55,7 +55,6 @@
           </td>
         </tr>
       </table><!-- End Header -->
-      <div style="height:15px">&nbsp;</div><!-- spacer -->
 <!-- CIVIMAIL BODY -->
       <!-- Call to action -->
       <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
