--- a/civimail-template.html
+++ b/civimail-template.html
@@ -105,7 +105,7 @@
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
             <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-              THIS IS THE FINAL PARAGRAPH. DONT DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
+              THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
               <table width="120" align="left" style="margin: 15px 0 5px;">
                 <tr>
                   <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; background-repeat: repeat-x;" align="center">
@@ -142,7 +142,7 @@
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
             <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-              THIS IS THE FINAL PARAGRAPH. DONT DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
+              THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
               <table width="120" align="left" style="margin: 15px 0 5px;">
                 <tr>
                   <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
