Test CiviMail template on Email on Acid

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -18,6 +18,7 @@
       body[yahoo] .center {text-align: center!important;}
     }
   </style>
+                                                                                                                       
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" yahoo="fix" style="font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
 <!-- Wrapper -->
@@ -62,7 +63,7 @@
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#1e9dd8">
             <table>
               <tr>
-                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
+                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
                   MESSAGE TITLE
                 </td>
               </tr>
@@ -71,8 +72,8 @@
               THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT. REPLACE ALL CAPS TEXT IN THIS EMAIL WITH ACTUAL TEXT.
               <table width="120" align="left" style="margin: 15px 0 5px;">
                 <tr>
-                  <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                    <a href=""
+                  <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
+                    <a href="http://citybibleforum.org"
                        style="
                        color: #02426f;
                        font-size: 14px;
@@ -108,8 +109,8 @@
               THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
               <table width="120" align="left" style="margin: 15px 0 5px;">
                 <tr>
-                  <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                    <a href=""
+                  <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
+                    <a href="http://citybibleforum.org"
                        style="
                        color: #ffffff;
                        font-size: 14px;
@@ -133,7 +134,7 @@
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#02426f">
             <table>
               <tr>
-                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
+                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
                   SECTION - NO IMAGE - EVEN
                 </td>
               </tr>
@@ -145,8 +146,8 @@
               THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
               <table width="120" align="left" style="margin: 15px 0 5px;">
                 <tr>
-                  <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                    <a href=""
+                  <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
+                    <a href="http://citybibleforum.org"
                        style="
                        color: #02426f;
                        font-size: 14px;
@@ -193,8 +194,8 @@
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                     <table width="120" align="left" style="margin: 15px 0 5px;">
                       <tr>
-                        <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                          <a href=""
+                        <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
+                          <a href="http://citybibleforum.org"
                              style="
                              color: #ffffff;
                              font-size: 14px;
@@ -235,7 +236,7 @@
                 <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
                   <table>
                     <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
+                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
                         SECTION - LANDSCAPE IMAGE - EVEN
                       </td>
                     </tr>
@@ -244,8 +245,8 @@
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                     <table width="120" align="left" style="margin: 15px 0 5px;">
                       <tr>
-                        <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                          <a href=""
+                        <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
+                          <a href="http://citybibleforum.org"
                              style="
                              color: #02426f;
                              font-size: 14px;
@@ -272,7 +273,7 @@
           <td style="background-color: #d8eaf9; border-radius: 4px;">
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
-                <td width="49%" style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
+                <td width="54%" style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
                   <table>
                     <tr>
                       <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
@@ -284,8 +285,8 @@
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                     <table width="120" align="left" style="margin: 15px 0 5px;">
                       <tr>
-                        <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                          <a href=""
+                        <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
+                          <a href="http://citybibleforum.org"
                              style="
                              color: #ffffff;
                              font-size: 14px;
@@ -301,7 +302,7 @@
                     </table>
                   </p>
                 </td>
-                <td width="49%" valign="top" align="right" class="center" style="padding: 0;">
+                <td width="46%" valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
                     <a href="#">
                       <img width="267" src="http://citybibleforum.org/sites/default/files/images/sydney/2013/re-think.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
@@ -319,10 +320,10 @@
           <td style="background-color: #02426f; border-radius: 4px;">
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
-                <td width="49%" style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
+                <td width="54%" style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
                   <table>
                     <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0;">
+                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
                         SECTION - PORTRAIT IMAGE - EVEN
                       </td>
                     </tr>
@@ -331,8 +332,8 @@
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                     <table width="120" align="left" style="margin: 15px 0 5px;">
                       <tr>
-                        <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; background-repeat: repeat-x;" align="center">
-                          <a href=""
+                        <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
+                          <a href="http://citybibleforum.org"
                              style="
                              color: #02426f;
                              font-size: 14px;
@@ -348,7 +349,7 @@
                     </table>
                   </p>
                 </td>
-                <td width="49%" valign="top" align="right" class="center" style="padding: 0;">
+                <td width="46%" valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
                     <a href="#">
                       <img width="267" src="http://citybibleforum.org//sites/default/files/images/content/monkey-suit--aaron.michels--flickr.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
@@ -364,9 +365,9 @@
       <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" style="margin-top: 30px; margin-bottom: 30px;">
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   Melbourne
                 </td>
               </tr>
@@ -382,9 +383,9 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   Blog
                 </td>
               </tr>
@@ -400,9 +401,9 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   Library
                 </td>
               </tr>
@@ -418,9 +419,9 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   Sydney
                 </td>
               </tr>
@@ -436,9 +437,9 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   National
                 </td>
               </tr>
@@ -454,9 +455,9 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table width="100%">
+            <table>
               <tr>
-                <td bgcolor="#02426f" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #02426f; border-radius: 4px;">
+                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
                   Brisbane
                 </td>
               </tr>
@@ -482,7 +483,7 @@
                 <td>
                   <table width="45%" cellpadding="0" cellspacing="0"  border="0" align="left" class="deviceWidth" style="margin-bottom: 30px;">
                     <tr>
-                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
+                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
                         This email was sent to:<br/>
                         {contact.display_name}<br/>
                         <br/>
@@ -494,7 +495,7 @@
                   </table>
                   <table width="40%" cellpadding="0" cellspacing="0"  border="0" align="right" class="deviceWidth">
                     <tr>
-                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
+                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
                         <a href="http://citybibleforum.org" style="font-size: 16px; color: #ffffff; font-weight: bold; text-decoration: none;">City Bible Forum</a><br/>
                         <br/>
                         National office:<br/>
