Add email footer JPEG

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -5,10 +5,28 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>City Bible Forum</title>
   <style type="text/css">
-    .ReadMsgBody {width: 100%; background-color: #ffffff;}
-    .ExternalClass {width: 100%; background-color: #ffffff;}
-    body {width: 100%; background-color: #ffffff; margin:0; padding:0; -webkit-font-smoothing: antialiased;font-family: "Open Sans",Arial,Helvetica,sans-serif;}
-    table {border-collapse: collapse;}
+    .ReadMsgBody {
+      width: 100%;
+      background-color: #ffffff;
+    }
+    .ExternalClass {
+      width: 100%;
+      background-color: #ffffff;
+    }
+    body {
+      width: 100%;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 0;
+      -webkit-font-smoothing: antialiased;
+      font-family: "Open Sans",Arial,Helvetica,sans-serif;
+    }
+    table {
+      border-collapse: collapse;
+    }
+    table.MsoNormalTable {
+      font-family: "Open Sans",Arial,Helvetica,sans-serif;
+    }
     @media only screen and (max-width: 640px) {
       body[yahoo] .deviceWidth {width:440px!important; padding:0;}
       body[yahoo] .center {text-align: center!important;}
@@ -18,7 +36,6 @@
       body[yahoo] .center {text-align: center!important;}
     }
   </style>
-                                                                                                                       
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" yahoo="fix" style="font-family: 'Open Sans',Arial,Helvetica,sans-serif;">
 <!-- Wrapper -->
@@ -488,8 +505,8 @@
                         {contact.display_name}<br/>
                         <br/>
                         <a href="{action.forward}" style="color: #989898;">Forward</a> this email to a friend or colleague<br/>
-                        <a href="{action.unsubscribeUrl}" style="color: #989898;">Unsubscribe</a> from emails on this topic<br/>
-                        or <a href="{action.optOutUrl}" style="color: #989898;">opt out</a> from all future communication with us
+                        <a href="{action.unsubscribeUrl}" style="color: #989898;">Stop</a> receiving emails on this topic<br/>
+                        or <a href="{action.optOutUrl}" style="color: #989898;">never receive</a> emails from us again
                       </td>
                     </tr>
                   </table>
@@ -516,3 +533,4 @@
 </table> <!-- End Wrapper -->
 </body>
 </html>
+
