Put image in email footer

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -510,11 +510,19 @@
                       </td>
                     </tr>
                   </table>
+
+            <!-- Logo -->
+            <table border="0" cellpadding="0" cellspacing="0" align="left" class="deviceWidth">
+            </table><!-- End Logo -->
+
                   <table width="40%" cellpadding="0" cellspacing="0"  border="0" align="right" class="deviceWidth">
                     <tr>
+                      <td style="vertical-align: top; padding: 0 5px 10px;">
+                        <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-footer.jpg" alt="" border="0" /></a>
+                      </td>
+                    </tr>
+                    <tr>
                       <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
-                        <a href="http://citybibleforum.org" style="font-size: 16px; color: #ffffff; font-weight: bold; text-decoration: none;">City Bible Forum</a><br/>
-                        <br/>
                         National office:<br/>
                         <br/>
                         {domain.address}<br/>
